--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ python-multipart==0.0.6
 psycopg2-binary==2.9.9
 pytz==2023.3
 python-dotenv==1.0.0
-typing-extensions  # Removed version pin to allow pip to resolve
+typing-extensions 
