--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.104.1
+fastapi==0.115.0
 uvicorn==0.24.0
 sqlalchemy==2.0.23
 pydantic==2.12.3
 pydantic-settings==2.0.3
 supabase==2.22.0
-websockets>=11,<12
+websockets>=13.0,<15.0
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 psycopg2-binary==2.9.9
@@ -12,3 +12,5 @@ pytz==2023.3
 python-dotenv==1.0.0
 typing-extensions
 psutil==5.9.6
+google-genai==1.46.0
+"pydantic[email]"
